<resources>
    <string name="app_name">CarSharingApp</string>
    <string name="drivenext">DriveNext</string>
    <string name="helpyoufindyournexttrip">Поможем найти твою следующую поездку</string>
    <string name="enter">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="image">image</string>
    <string name="Logintoyouraccount">Войдите в аккаунт</string>
    <string name="Pleaseenteryourdetails">Пожалуйста, введите свои данные</string>
    <string name="email">Электронная почта</string>
    <string name="Enteryouremail">Введите электронную почту</string>
    <string name="password">Пароль</string>
    <string name="Enterpassword">Введите пароль</string>
    <string name="forgotpassword">Забыли пароль?</string>
    <string name="loginGoogle">Войти через Google</string>
    <string name="notconnectionTitle">Нет подключения\nк интернету</string>
    <string name="noconnectionText">Проверьте подключение и повторите\nпопытку</string>
    <string name="tryagain">Повторить попытку</string>
    <string name="return_back">Return back</string>
    <string name="createaccount">Создать аккаунт</string>
    <string name="surname">Фамилия</string>
    <string name="entersurname">Введите фамилию</string>
    <string name="name">Имя</string>
    <string name="entername">Введите имя</string>
    <string name="middlename">Отчество</string>
    <string name="entermiddlename">Введите отчество</string>
    <string name="Datebirth">Дата рождения</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="gender">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="next">Далее</string>
    <string name="createpassword">Придумайте пароль</string>
    <string name="repeatpassword">Повторите пароль</string>
    <string name="Iagreeterms">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="enter_photo">enter photo</string>
    <string name="addingphotoText">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="Driverlicensenumber">Номер водительского удостоверения</string>
    <string name="_0000000000">0000000000</string>
    <string name="Dateissue">Дата выдачи</string>
    <string name="carrental">Аренда автомобилей</string>
    <string name="discoverconvenient">Открой для себя удобный и доступный способ передвижения</string>
    <string name="safeandconvenient">Безопасно и удобно</string>
    <string name="rentcarandenjoy">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="bestoffers">Лучшие предложения</string>
    <string name="choosewhatyoulikeamong">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="usewithpleasure">Пользуйтесь с удовольствием</string>
    <string name="congratulate">Поздравляем</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>