<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/ibReturnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/return_back"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="24dp"
        android:text="@string/createaccount"
        style="@style/textHeading" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="87dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/surname"
            style="@style/textTitleInput" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/entersurname"
            android:paddingStart="14dp"
            style="@style/textPar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/name"
            style="@style/textTitleInput" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/entername"
            android:paddingStart="14dp"
            style="@style/textPar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/middlename"
            style="@style/textTitleInput" />

        <EditText
            android:id="@+id/etMidllename"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/entermiddlename"
            android:paddingStart="14dp"
            style="@style/textPar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/Datebirth"
            style="@style/textTitleInput" />

        <EditText
            android:id="@+id/etDateBirth"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/dd_mm_yyyy"
            android:paddingStart="14dp"
            android:focusable="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            style="@style/textPar"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        style="@style/textTitleInput"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textPar"
            android:text="@string/male"
            android:checked="true"/>

        <RadioButton
            android:layout_marginStart="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textPar"
            android:text="@string/female"/>

    </RadioGroup>

    <android.widget.Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        style="@style/btnFiolStyle"
        android:text="@string/next"
        android:layout_marginBottom="66dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>