<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/Logintoyouraccount"
        style="@style/textHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/Pleaseenteryourdetails"
        style="@style/textPar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/email"
            style="@style/textTitleInput"/>

        <EditText
            android:id="@+id/etLoginMail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/Enteryouremail"
            android:paddingStart="14dp"
            style="@style/textPar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/password"
            style="@style/textTitleInput" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/Enterpassword"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:drawableEnd="@drawable/ic_eye"
            style="@style/textPar"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <android.widget.Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        style="@style/btnFiolStyle"
        android:layout_marginTop="32dp"
        android:text="@string/enter"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        tools:layout_editor_absoluteX="24dp" />

    <LinearLayout
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/shape_button_registration"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:layout_editor_absoluteX="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_google"
            android:paddingEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginGoogle"
            android:textColor="#344054"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle" />



</androidx.constraintlayout.widget.ConstraintLayout>