<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibReturnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/return_back"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="24dp"
            android:text="@string/createaccount"
            style="@style/textHeading" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="87dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/email"
            style="@style/textTitleInput"/>

        <EditText
            android:id="@+id/etNewMail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/Enteryouremail"
            android:paddingStart="14dp"
            style="@style/textPar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/createpassword"
            style="@style/textTitleInput" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/Enterpassword"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:drawableEnd="@drawable/ic_eye"
            style="@style/textPar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/repeatpassword"
            style="@style/textTitleInput" />

        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/Enterpassword"
            android:inputType="textPassword"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:drawableEnd="@drawable/ic_eye"
            style="@style/textPar"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbAcceptRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Iagreeterms"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"/>

    <android.widget.Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        style="@style/btnFiolStyle"
        android:text="@string/next"
        android:layout_marginBottom="66dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>