<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ibReturnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/return_back"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="24dp"
            android:text="@string/createaccount"
            style="@style/textHeading" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/enter_photo"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/textView4"
        style="@style/textTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/addingphotoText"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:layout_editor_absoluteX="24dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/Driverlicensenumber"
            style="@style/textTitleInput" />

        <EditText
            android:id="@+id/etDriverLicense"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/_0000000000"
            android:paddingStart="14dp"
            android:inputType="number"
            style="@style/textPar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            style="@style/textTitleInput"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/Dateissue" />

        <EditText
            android:id="@+id/etDateIssue"
            style="@style/textPar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/shape_button_registration"
            android:hint="@string/dd_mm_yyyy"
            android:focusable="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:cursorVisible="false"
            android:paddingStart="14dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        style="@style/textTitleInput"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="Загрузите фото водительского удостоверения"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/shape_button_registration"
            android:contentDescription="@string/image"
            android:padding="16dp"
            android:src="@drawable/ic_upload" />

        <TextView
            style="@style/textPar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="Загрузить фото" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        style="@style/textTitleInput"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text="Загрузите фото водительского удостоверения"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/shape_button_registration"
            android:contentDescription="@string/image"
            android:padding="16dp"
            android:src="@drawable/ic_upload" />

        <TextView
            style="@style/textPar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="Загрузить фото" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        style="@style/btnFiolStyle"
        android:text="@string/next"
        android:layout_marginBottom="66dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>